# PyMEGDec-DEPRECATED

./: .jscpd.json  .mega-linter.yml  ARCHIVE.md  CITATION.cff  README.md  SECURITY.md  analyze_alpha_reaction_time.py  dataset.yml  export_alpha_metrics.py  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md  release-notes-instructions.md
.github/ISSUE_TEMPLATE/: config.yml
.github/scripts/: apply_trial_selection_fix.py  install-rclone.sh
.github/workflows/: apply-clean-stimulus-summary-fix.yml  compare-nested-runs.yml  docs.yml  download-meg-data.yml  mega-linter.yml  pages.yml  stimulus-artifact-ensemble.yml  stimulus-artifact-weighted-meta-selector.yml  stimulus-cross-subject-alignment-benchmarks.yml  stimulus-cross-subject-cue-calibrated.yml  stimulus-cross-subject-full-epoch-lowrank.yml  stimulus-cross-subject-mcca.yml  stimulus-cross-subject-nested-matrix.yml  stimulus-cross-subject-nested-topk-matrix.yml  stimulus-cross-subject-nested.yml  stimulus-cross-subject-rank-aware-nested-matrix.yml  stimulus-cross-subject-rank-aware.yml  stimulus-cross-subject-smoke.yml  stimulus-cross-subject-time-resolved.yml  stimulus-decoding.yml  stimulus-hyperalignment-grid.yml  stimulus-latent-autoencoder.yml  stimulus-mcca-grid.yml  stimulus-onset-benchmark.yml  stimulus-predictions.yml  stimulus-robustness.yml  stimulus-source-inner-stack.yml  stimulus-source-only-next.yml  stimulus-temporal-generalization.yml  tags-and-github-release.yml  tests.yml
docs/: alpha.md  api.md  archive.md  cli.md  covariance-features.md  data.md  deprecation.md  development.md  full-epoch-lowrank.md  getting-started.md  hyperalignment-neureptrace-boundary.md  index.md  stimulus-decoding.md
scripts/: cache_ucl_rdr_dataset.py  download_meg_data_files.py  download_private_meg_data.py  export_stimulus_cross_subject_cue_calibrated.py  export_stimulus_cross_subject_logit_stack.py  export_stimulus_cross_subject_nested.py  export_stimulus_cross_subject_nested_controlled.py  export_stimulus_cross_subject_smoke.py  export_stimulus_onset_decision_summary.py  export_stimulus_onset_operating_point_sweep.py  export_stimulus_onset_scan.py  export_stimulus_robustness.py  export_stimulus_temporal_generalization.py  run_alignment_loso_benchmarks.sh
src/pymegdec/: __init__.py  _alpha_movement_common_projection.py  _conservative_topk.py  _procrustes_target_alignment.py  _reptrace_score_overrides.py  _stimulus_cross_subject_core.py  _stimulus_cross_subject_legacy.py  _stimulus_cross_subject_next.py  _stimulus_cross_subject_timefix.py  _stimulus_decoding_core.py  _stimulus_hyperalignment_legacy.py  _stimulus_mcca_legacy.py  _stimulus_summary.py  _stimulus_trial_sampling.py  alignment_window.py  alpha_cli.py  alpha_metrics.py  alpha_movement.py  alpha_signal.py  artifact_ensemble_meta_selector.py  artifact_ensemble_weighted_meta_selector.py  classifiers.py  cli.py  cli_consolidated.py  cli_with_synthetic.py  cross_validation.py  data_download.py  deprecated_entrypoints.py  deprecation.py  grouped_cli.py  legacy.py  model_transfer.py  neureptrace_compat.py  neureptrace_dataset_spec.py  preprocessing.py  stimulus_cli.py  (+21 more)
tests/: artifact_ensemble_meta_selector_helpers.py  matlab_fixtures.py  test_alpha_movement_power_guard.py  test_alpha_sensor_projection.py  test_artifact_ensemble_meta_selector.py  test_artifact_ensemble_weighted_meta_selector.py  test_classifier_registry.py  test_classifiers.py  test_cli_consolidation.py  test_conservative_topk.py  test_data_download.py  test_deprecation.py  test_legacy_workflows.py  test_model_transfer.py  test_neureptrace_compat.py  test_neureptrace_dataset_spec.py  test_source_anova_feature_transform.py  test_stimulus_alignment_benchmarks.py  test_stimulus_artifact_ensemble.py  test_stimulus_chance.py  test_stimulus_covariance_features.py  test_stimulus_cross_subject.py  test_stimulus_cross_subject_chance.py  test_stimulus_cross_subject_label_controls.py  test_stimulus_cross_subject_next.py  test_stimulus_cue_calibration.py  test_stimulus_cue_low_capacity.py  test_stimulus_decoding.py  test_stimulus_full_epoch_lowrank.py  test_stimulus_hyperalignment_neureptrace_boundary.py  test_stimulus_latent_autoencoder_calibration.py  test_stimulus_latent_autoencoder_controls.py  test_stimulus_latent_autoencoder_head_blend.py  test_stimulus_latent_autoencoder_head_refit.py  test_stimulus_latent_autoencoder_logistic_stack.py  test_stimulus_latent_autoencoder_low_margin.py  test_stimulus_latent_autoencoder_postprocessing.py  test_stimulus_latent_autoencoder_predictions.py  test_stimulus_latent_autoencoder_presets.py  test_stimulus_latent_autoencoder_score_calibration.py  (+13 more)
(+1 files in other folders)
