[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "pymegdec"
version = "0.1.0"
description = "MEG decoding utilities for model transfer and cross-validation experiments."
authors = [
    { name = "Florian Pfaff", email = "pfaff@ias.uni-stuttgart.de" },
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas>=3.0.2,<4.0.0",
    "reptrace @ git+https://github.com/IPS-Stuttgart/RepTrace.git@main",
    "scikit-learn",
    "scipy",
]

[project.optional-dependencies]
xgboost = [
    "xgboost",
]
torch = [
    "pytorch-lightning",
    "torch",
]
all = [
    "pytorch-lightning",
    "torch",
    "xgboost",
]
ml = [
    "pytorch-lightning",
    "torch",
    "xgboost",
]
dev = [
    "autopep8>=2.3.2,<3.0.0",
    "pytest",
    "pytorch-lightning",
    "torch",
    "xgboost",
]

[project.scripts]
pymegdec = "pymegdec.cli:main"
pymegdec-cross-validate = "pymegdec.cli:cross_validate"
pymegdec-transfer = "pymegdec.cli:transfer"
pymegdec-stimulus-decoding = "pymegdec.cli:stimulus_decoding"
pymegdec-alpha-movement-results = "pymegdec.cli:alpha_movement_results"

[tool.poetry]
packages = [{ include = "pymegdec", from = "src" }]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true

[tool.black]
line-length = 180

[tool.isort]
line_length = 180
profile = "black"

[tool.ruff]
line-length = 180

[tool.pylint.MAIN]
py-version = "3.13"
fail-under = 10
ignore = ["CVS"]

[tool.pylint."MESSAGES CONTROL"]
disable = [
  "raw-checker-failed",
  "bad-inline-option",
  "locally-disabled",
  "file-ignored",
  "suppressed-message",
  "deprecated-pragma",
  "use-symbolic-message-instead",
  "C",
  "W0221",
  "duplicate-code",
  "import-error",
  "redefined-builtin",
  "cyclic-import",
  "implicit-str-concat",
]

[tool.pylint.FORMAT]
max-line-length = 180

[tool.pylint.DESIGN]
max-args = 9
max-attributes = 12
max-locals = 29
max-positional-arguments = 9
max-parents = 15
max-public-methods = 25
min-public-methods = 0
